General updates and created a coverletter.

--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -53,15 +53,14 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 \photo[circle,noedge,left]{./examples/profile}
-\name{Claud D.}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Nicholas L.}{Butts}
+\position{Software Engineer{\enskip\cdotp\enskip}Embedded System Expert}
+\address{908 7th St. East, West Fargo, ND 58078}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(701) 371-3358}
+\email{nlbutts@ieee.org}
+\github{nlbutts}
+\linkedin{nicholas-butts-1a456569}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +72,8 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
+\quote{``Study hard what interests you the most in the most undisciplined, irreverent and original manner possible. --Richard Feynmann"}
 
 
 %-------------------------------------------------------------------------------
@@ -82,14 +82,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  {Adrian Kallis}
+  {John Deere}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
 \lettertitle{Job Application for Software Engineer}
 % How the letter is opened
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{Dear Mr. Kallis}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -107,7 +107,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Nick Butts~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter informations
@@ -119,13 +119,13 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+Hopefully you remember me from a few years back. My name is Nick Butts. I worked at John Deere from 2000 to 2010. Back in October, Andy Norby and I had lunch and caught up on old times. Andy and I went to school together and we were in the same fraternity together. Andy told me about the reorganization at John Deere and asked if I would be interested in coming back. I've also talked with Tim Scott over the years and caught up with him back in October. It doesn't appear there are any open positions at John Deere at the moment, but I thought I would write you and kindly ask for your consideration if a position opens up in your group. If you would like I can send you my resume for your review.
 
-\lettersection{Why Google?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+\lettersection{Why John Deere?}
+You may be asking why I would like to come back to work for John Deere. I left John Deere in 2010 due to being recruited by Bob Weinmann and a few others at Appareo systems. I wasn't actively looking for a new job, but the work seemed interesting. I had just finished my Masters degree and had spent a good deal of time working with computer vision and what would soon become the breakthrough in AI, deep neural networks. I have learned a great deal working at Appareo and am thankful for the experience. But times have been tough for Appareo and I would like to get back to a products company. I would like to work at a company that has a strong identity and wants to invest in its own products and future.
 
 \lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+I've spent a fair amount of my time at Appareo working on agricultural products. I've done work very similar to what I worked on at John Deere. I believe my skill set would be of benefit to John Deere. I have worked on a great many technologies and have obtained a number of patents in the area of sensors and machine intelligence.
 
 \end{cvletter}
 
