--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,7 +17,8 @@
     {Jun. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Technical lead and lead embedded software engineer on an AI enabled rugged aviation camera that used the NVidia Jetson Nano platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing Yocto Linux, C/C++, Python, Tensorflow, and TensorRT.}
+        \item {Leading group that investigates new technology, creates proof-of-concept demonstrators, and de-risks complex technologies.}
+        \item {Technical lead, project manager, and lead embedded software engineer on an AI, CATM1 enabled rugged aviation camera that used the NVidia Jetson platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing Yocto Linux, C/C++, Python, Tensorflow, GStreamer, ZMQ, and Protobufs.}
       \end{cvitems}
     }
 
@@ -31,13 +32,13 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Project lead on a complex multi-radio communications Gateway for Northrop Grumman that utilized Iridium, OpenThread, Trellisware, and ultrawideband radio technologies developed in Yocto Linux and C/C++.}
-        \item {Technical lead on a real-time embedded sensing module for liquid flow pressure and volume monitoring for agricultural sprayers utilizing C/C++, CAN, and J1939.}
-        \item {Architectured a complex real-time embedded control module to control droplet size and flow rate on smart liquid nozzles for agricultural sprayers utilizing C/C++, CAN, J1939, and ISO 11783.}
-        \item {Studied advanced acoustic designs for individual seed counting in air seeder applications. Created proof-of-concept hardware platforms for data acquisition and advanced signal processing algorithm to count seeds and separate singles from double impacts.}
+        \item {Technical lead on a real-time embedded sensing module for liquid flow pressure and volume monitoring for agricultural sprayers.}
+        \item {Architectured a complex real-time embedded control module to control certain aspects of agricultural sprayers.}
+        \item {Studied advanced acoustic designs for individual seed counting in air seeder applications. Created proof-of-concept hardware platforms for data acquisition and advanced signal processing algorithms to count seeds and separate singles from double impacts.}
         \item {Researched, designed, built, and tested a 2.4 GHz Frequency Modulated Continuous Wave radar for under crop canopy obstacle detection utilizing C/C++ and Python.}
         \item {Technical lead of an Emergency Use Authorization COVID 19 mechanical resuscitator that was designed, fabricated, and tested in three weeks.}
-        \item {Researched on various acoustic electro/mechanical conduction means for seed counting.}
-        \item {Designed, built, and tested an innovative low light 360 degree underwater camera for fisherman utilizing C/C++ and Python.}
+        \item {Research on various acoustic electro/mechanical conduction means for seed counting.}
+        \item {Designed, built, and tested an innovative low light 360 degree underwater camera for fisherman utilizing C/C++, Python, POE, ray traced optical simulation.}
       \end{cvitems}
     }
 
@@ -50,7 +51,7 @@
     {.
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Lead team of embedded software engineers, created processes and procedures for company wide New Product Realization Process, guided software architecture on new products, mentored embedded software engineers.}
-        \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, CAN, and ISO 11783.}
+        \item {Technical lead on embedded acoustic mass flow detection device mounted inside combine processor/cleaning shoe utilizing C/C++, and ISO 11783.}
         \item {Technical lead on embedded grain quality sensor that is mounted on the clean grain elevator. This device utilized acoustic sensing to synchronize high output LED flash and a high speed image sensor capture of grain passing through the clean grain elevator. Then it applied computer vision techniques to detect material other than grain and broken grain utilizing C/C++, Python, CAN, Ethernet, and ISO 11783.}
         \item {Researched on autonomous combine operation using advanced acoustic, electro-optical, LIDAR, 24/77 GHz radars sensors and fuzzy logic control systems.}
       \end{cvitems}
