--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -22,7 +22,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Squadron Commander} % Affiliation/role
+    {Former Squadron Commander} % Affiliation/role
     {CAP (Civil Air Patrol)} % Organization/group
     {Fargo, ND} % Location
     {Aug. 2012 - Apr. 2020} % Date(s)
