--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -21,10 +21,12 @@
     {OpenCV, Tensorflow, Keras, Matplotlib, Pandas, Numpy, SciPy, Protobuf, Google Test, Google Mock, GStreamer} % skill
   \cvskill
     {Networks} % type
-    {TCP/IP, ZMQ, CAN, J1939, ISO-11783, Custom protocols} % skill
+    {TCP/IP, ZMQ, CAN, J1939, ISO-11783, MQTT, Custom protocols} % skill
   \cvskill
     {Technology Focus} % type
     {Embedded Systems, Microcontrollers, Computer Vision, Machine Learning, FPGAs, RF radios, SDR} % skill
+    \cvskill
+    {General} % type
+    {Team builder, Innovator, Hard Worker, Farm kid} % skill
 
 \end{cvskills}
-
