--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Leading group that investigates new technology, creates proof-of-concept demonstrators, and de-risks complex technologies.}
-        \item {Technical lead, project manager, and lead embedded software engineer on an AI, CATM1 enabled rugged aviation camera that used the NVidia Jetson platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing Yocto Linux, C/C++, Python, Tensorflow, GStreamer, ZMQ, and Protobufs.}
+        \item {Technical lead, project manager, certification lead and lead embedded software engineer on an AI, CATM1 enabled rugged aviation camera that used the NVidia Jetson platform, 4K imaging, and Deep Neural Networks (DNN) for cockpit gauge recognition utilizing Yocto Linux, C/C++, Python, Tensorflow, GStreamer, ZMQ, Protobufs, and RTP.}
       \end{cvitems}
     }
 
