--- a/examples/resume/patents.tex
+++ b/examples/resume/patents.tex
@@ -81,5 +81,11 @@
     {Ads-b transponder system and method} % title
     {US20190049576A1} % number
 
+%---------------------------------------------------------
+  \cvpatent
+    {2021} % year
+    {RF Communications System and Method} % title
+    {US11018764B2} % number
+
 \end{cvpatents}
 
