--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -12,16 +12,16 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % type
-    {C, C++, Python, C\#, Bash, Matlab, Perl} % skill
+    {C, C++, Python, C\#, Bash, Matlab, Perl, various assembly languages, HDL} % skill
   \cvskill
     {OS} % type
     {Yocto Linux, Ubuntu Linux, Windows, Windows CE, Nucleous, FreeRTOS, Bare Metal} % skill
   \cvskill
     {Frameworks} % type
-    {OpenCV, Tensorflow, Keras, Matplotlib, Pandas, Numpy, SciPy, Protobuf, Google Test, Google Mock, GStreamer} % skill
+    {OpenCV, Tensorflow, Keras, Matplotlib, Pandas, Numpy, SciPy, Protobuf, Google Test, Google Mock, GStreamer, Docker} % skill
   \cvskill
     {Networks} % type
-    {TCP/IP, ZMQ, CAN, J1939, ISO-11783, MQTT, Custom protocols} % skill
+    {TCP/IP, ZMQ, CAN, J1939, ISO-11783, MQTT, RTP, RTCP, OpenThread, LoraWAN, Custom protocols} % skill
   \cvskill
     {Technology Focus} % type
     {Embedded Systems, Microcontrollers, Computer Vision, Machine Learning, FPGAs, RF radios, SDR} % skill
