--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -82,18 +82,17 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Adrian Kallis}
   {John Deere}
 % The date on the letter, default is the date of compilation
-\letterdate{\today}
+ \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Software Engineer}
+\lettertitle{Job Application for Staff Software Design Engineer}
 % How the letter is opened
-\letteropening{Dear Mr. Kallis}
+\letteropening{To Whom it May Concern}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
-\letterenclosure[Attached]{Curriculum Vitae}
+%\letterenclosure[Attached]{Curriculum Vitae}
 
 
 %-------------------------------------------------------------------------------
@@ -119,13 +118,21 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Hopefully you remember me from a few years back. My name is Nick Butts. I worked at John Deere from 2000 to 2010. Back in October, Andy Norby and I had lunch and caught up on old times. Andy and I went to school together and we were in the same fraternity together. Andy told me about the reorganization at John Deere and asked if I would be interested in coming back. I've also talked with Tim Scott over the years and caught up with him back in October. It doesn't appear there are any open positions at John Deere at the moment, but I thought I would write you and kindly ask for your consideration if a position opens up in your group. If you would like I can send you my resume for your review.
+My name is Nicholas (Nick) Butts. I worked at Deere from 1999 to 2010. I left John Deere to pursue additional experiences in aviation and aviaton electronics. I've spent the last 11 years working at Appareo systems focused on embedded systems. I've worked on complex software defined radio systems where I wrote much of the software that ran on an embedded real time microcontroller. The software interfaced with an FPGA to receive demodulated RF packets, converted and aggregated data. The data was then saved to a non-volatile memory device and transmitted via WiFi.
+
+I've also worked on agricultural products, such as acoustic sensors, grain quality cameras, and spraying systems. All of these systems used J1939 and ISO11783 networks to communicate with displays, iPads, and other controllers. Some of these systems used real time operating systems while others used Yocto Linux with network stacks and FPGA acceleration blocks for image processing.
+
+I then spent five years working in the Research group where I specialized in rapid proof-of-concept hardware/software designs for underwater cameras, radar, acoustic sensors, and liquid flow sensors.
+
+I've spent the last few years leading a team working on complex telematics platforms for the defense industry and an AI enabled camera for the avionics industry.
 
 \lettersection{Why John Deere?}
-You may be asking why I would like to come back to work for John Deere. I left John Deere in 2010 due to being recruited by Bob Weinmann and a few others at Appareo systems. I wasn't actively looking for a new job, but the work seemed interesting. I had just finished my Masters degree and had spent a good deal of time working with computer vision and what would soon become the breakthrough in AI, deep neural networks. I have learned a great deal working at Appareo and am thankful for the experience. But times have been tough for Appareo and I would like to get back to a products company. I would like to work at a company that has a strong identity and wants to invest in its own products and future.
+You may be asking why I would like to come back to work for John Deere. I left John Deere in 2010 due to being recruited by Appareo systems. I am also a pilot and I thought it would be interesting to merge my passion for flying with my passion for engineering. I have learned a great deal working at Appareo and am thankful for the experience. But times have been tough for Appareo and I would like to get back to a products company. I would like to work at a company that has a strong identity and wants to invest in its own products and future. I also would like to work with a high performance teams.
 
 \lettersection{Why Me?}
-I've spent a fair amount of my time at Appareo working on agricultural products. I've done work very similar to what I worked on at John Deere. I believe my skill set would be of benefit to John Deere. I have worked on a great many technologies and have obtained a number of patents in the area of sensors and machine intelligence.
+I've spent my life improving myself as an engineer, a team member, and a leader. After receiving my bachelor’s degree I went on to pursue my master’s degree in Electrical Engineering. My thesis resulted in my first patent with Dr. Noel Anderson, who works at John Deere. I've continued to invest in myself learning much about traditional computer vision processing, deep neural networks, machine learning, data analysis, Yocto Linux (both kernel level and application level development), as well as bare metal and RTOS development on Cortex M style microcontrollers.
+
+I have led high performance teams in concepting, requirements capture, architecture, design, test, and release to manufacturing. I believe my skills would be of direct benefit to John Deere. I would like to see what I can do to help John Deere become the best agricultural company on the planet.
 
 \end{cvletter}
 
